add simple rest api endpoint

--- a/src/main/resources/labels.properties
+++ b/src/main/resources/labels.properties
@@ -1,2 +1,4 @@
 #put any key/value pairs here
 my.plugin.name=MyPlugin
+pull-request-labels.name=Pull Request Labels
+pull-request-labels.description=The Pull Request Labels Plugin
