--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,15 @@ events {
 http {
     server {
         listen 80;
-        location / {
-            proxy_pass_request_headers      on;
-            proxy_pass http://localhost:7990/;
+
+        location /bitbucket {
+            proxy_pass http://bitbucket:7990/bitbucket;
+            proxy_pass_request_headers on;
+            proxy_set_header Referer http://bitbucket:7990/;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Server $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         location /js/ {
