--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,24 @@
                     <verbose>false</verbose>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <execution>
+                        <id>batch.js</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>buildutils/batchjs</executable>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <properties>
@@ -232,6 +250,6 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <ao.version>3.1.7</ao.version>
         <atlassian.spring.scanner.version>1.2.13</atlassian.spring.scanner.version>
-        <reconquest.labels.js>labels.js</reconquest.labels.js>
+        <reconquest.batch.js>batch.js</reconquest.batch.js>
     </properties>
 </project>
