--- a/nginx.conf
+++ b/nginx.conf
@@ -9,9 +9,9 @@ http {
         listen 80;
 
         location /bitbucket {
-            proxy_pass http://bitbucket:7990/bitbucket;
+            proxy_pass http://bitbucket.local:7990/bitbucket;
             proxy_pass_request_headers on;
-            proxy_set_header Referer http://bitbucket:7990/;
+            proxy_set_header Referer http://bitbucket.local:7990/;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Server $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
